--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,18 @@ install/
 cgems/
 GEMS3K/ms_multi_new.h
 GEMS3K/s_fgl_new.h
+gemserver-build/*.txt
+gemserver-build/*.out
 gemserver-build/
 gemserver-build/Makefile.*
 gemserver-build/Makefile
 gemserver-build/obj
 gemserver-build/.qmake.*
 gemserver-build/gems3_server
-gemcalc-build/gems3_server.app
+gemserver-build/server_data
+gemserver-build/gems3_server.app
 gemserver-build/gems3_client
-gemcalc-build/gems3_client.app
+gemserver-build/gems3_client.app
 gemserver/*.pro.user
 gemserver/*.pro.user.*
 gemcalc-build/Makefile.*
