added configuration files for conda environment and ci build

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ nodearray-gem/nodearray-gem.pro.user
 nodearray-gem/nodearray-gem3.pro.user
 lib-gems3k/.qmake.stash
 lib-gems3k/release/libgems3k3.a
+environment.yml
