--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -19,20 +19,30 @@ if(BUILD_SHARED_LIBS)
     target_link_libraries(GEMS3K_SHARED zmq )
 #endif()
     set_target_properties(GEMS3K_SHARED PROPERTIES OUTPUT_NAME GEMS3K)
-    install(TARGETS GEMS3K_SHARED DESTINATION "lib" COMPONENT libraries)
+    install(TARGETS GEMS3K_SHARED 
+    EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
+
 
 # Check if a static library is to be built
 if(BUILD_STATIC_LIBS)
    add_library(GEMS3K_STATIC STATIC $<TARGET_OBJECTS:GEMS3K_OBJECT>)
    set_target_properties(GEMS3K_STATIC PROPERTIES OUTPUT_NAME GEMS3K-static)
-   install(TARGETS GEMS3K_STATIC DESTINATION "lib" COMPONENT libraries)
+   install(TARGETS GEMS3K_STATIC 
+   EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
 
-# Create an install target for the header files
-# Install the header files preserving the directory hierarchy
-install(FILES ${HEADER_FILES}
-        DESTINATION include/GEMS3K )
-#install(DIRECTORY ${GEMS3K_SOURCE_DIR}/GEMS3K
-#    DESTINATION "include" COMPONENT headers
-#    FILES_MATCHING PATTERN "*.h")
+# Install debug symbols
+if(MSVC)
+    install(
+        FILES $<TARGET_PDB_FILE:GEMS3K>
+        DESTINATION ${CMAKE_INSTALL_BINDIR}
+        COMPONENT libraries
+        OPTIONAL
+    )
+endif()
+
+# Install GEMS3K header files
+install(DIRECTORY ${PROJECT_SOURCE_DIR}/GEMS3K
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT headers
+    FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")
