--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -15,9 +15,11 @@ add_library(GEMS3K_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES})
 # Check if a shared library is to be built
 if(BUILD_SHARED_LIBS)
     add_library(GEMS3K_SHARED SHARED $<TARGET_OBJECTS:GEMS3K_OBJECT>)
-#if( ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
-    target_link_libraries(GEMS3K_SHARED zmq )
-#endif()
+    if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+        target_link_libraries(GEMS3K_SHARED libzmq )
+    else()
+        target_link_libraries(GEMS3K_SHARED zmq )
+endif()
     set_target_properties(GEMS3K_SHARED PROPERTIES OUTPUT_NAME GEMS3K)
     install(TARGETS GEMS3K_SHARED 
     EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
