Copy Dmitrii Kulik changes from bitbucked

--- a/.gitignore
+++ b/.gitignore
@@ -68,4 +68,5 @@ nodearray-gem/nodearray-gem.pro.user
 nodearray-gem/nodearray-gem3.pro.user
 lib-gems3k/.qmake.stash
 lib-gems3k/release/libgems3k3.a
-environment.yml
+.qmake.stash
+build-gemcalc-Desktop_Qt_5_12_7_clang_64bit-Debug
