--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -5,9 +5,10 @@ file(GLOB HEADER_FILES *.h)
 file(GLOB SOURCE_FILES *.cpp)
 
 # Set some necessary definitions
-#add_definitions(-DIPMGEMPLUGIN)
+add_definitions(-DIPMGEMPLUGIN)
 add_definitions(-DNOPARTICLEARRAY)
 add_definitions(-DNODEARRAYLEVEL)
+add_definitions(-DNO_JSON_OUT)
 
 # Compile the C++ source code into object files
 add_library(GEMS3K_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES})
