Changed the misleading flag -DNO_JSON_OUT to -DUSE_OLD_KV_IO_FILES

--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -5,10 +5,10 @@ file(GLOB HEADER_FILES *.h)
 file(GLOB SOURCE_FILES *.cpp)
 
 # Set some necessary definitions
-add_definitions(-DIPMGEMPLUGIN)
+#add_definitions(-DIPMGEMPLUGIN)
 add_definitions(-DNOPARTICLEARRAY)
 add_definitions(-DNODEARRAYLEVEL)
-add_definitions(-DNO_JSON_OUT)
+#add_definitions(-DUSE_OLD_KV_IO_FILES)
 
 # Compile the C++ source code into object files
 add_library(GEMS3K_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES})
