--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -49,3 +49,6 @@ endif()
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/GEMS3K
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT headers
     FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/simdjson
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT headers
+        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")
