Implemented Implemented SimdJsonWrite directly to JSON file, the order of fields as into key-value format.

--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB SOURCE_FILES *.cpp)
 #add_definitions(-DIPMGEMPLUGIN)
 add_definitions(-DNOPARTICLEARRAY)
 add_definitions(-DNODEARRAYLEVEL)
-#add_definitions(-DUSE_OLD_KV_IO_FILES)
+#add_definitions(-DUSE_OLD_NLOHMANJSON)
 
 # Compile the C++ source code into object files
 add_library(GEMS3K_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES})
