Added make&install kva2json; tested run all projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,5 +90,7 @@ link_directories(${CMAKE_BINARY_DIR}/GEMS3K)
 link_directories(${CMAKE_BINARY_DIR}/lib)
 
 
+add_subdirectory(tools)
+
 # Install the cmake config files that permit users to use find_package(gems3k)
 #include(GEMS3KInstallCMakeConfigFiles)
