--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ tools-build/Makefile.*
 tools-build/Makefile
 tools-build/obj
 tools-build/.qmake.*
-tools-build/tools
+tools-build/kva2json
 tools/*.pro.user
 tools/*.pro.user.*
 gemcalc-build/Makefile.*
