--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -3,12 +3,11 @@ name: GEMS3K
 dependencies:
   - gxx_linux-64=9.4.0  # [linux]
   - cmake>=3.13
-  - ninja # [unix]
-  - make  # [win]
+  - ninja
   - git
   - ccache  # [unix]
   - nlohmann_json
-  - spdlog=1.10.0
+  - thermofun=0.4.0
 
 environment:
 
