link fun public to kva2json

--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -24,7 +24,7 @@ if(BUILD_SHARED_LIBS)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
     add_library(GEMS3K_SHARED SHARED $<TARGET_OBJECTS:GEMS3K_OBJECT>)
     set_target_properties(GEMS3K_SHARED PROPERTIES OUTPUT_NAME GEMS3K)
-    target_link_libraries(GEMS3K_SHARED PRIVATE ThermoFun::ThermoFun)
+    target_link_libraries(GEMS3K_SHARED PUBLIC ThermoFun::ThermoFun)
     install( TARGETS GEMS3K_SHARED
              EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
@@ -34,7 +34,7 @@ endif()
 if(BUILD_STATIC_LIBS)
    add_library(GEMS3K_STATIC STATIC $<TARGET_OBJECTS:GEMS3K_OBJECT>)
    set_target_properties(GEMS3K_STATIC PROPERTIES OUTPUT_NAME GEMS3K-static)
-   target_link_libraries(GEMS3K_STATIC PRIVATE ThermoFun::ThermoFun)
+   target_link_libraries(GEMS3K_STATIC PUBLIC ThermoFun::ThermoFun)
    install( TARGETS GEMS3K_STATIC
            EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
