--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,8 +84,8 @@ jobs:
     inputs:
       filename: 'ci/pipelines/installVS.bat'
 
-  - script: |
-     call activate thermofun
-     conda list
-     call python -c "import thermofun"
-    displayName: Test
+  #- script: |
+  #   call activate thermofun
+  #   conda list
+  #   call python -c "import thermofun"
+  #  displayName: Test
