using thermofun, added win in azure CI (#26)
* using thermofun, added win in azure CI
* link to thermofun
* find tfun package
* find chemfun package
* fix liking on windows
* link fun public to kva2json
* removed test

--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -11,6 +11,8 @@ file(GLOB SOURCE_FILES *.cpp)
 #add_definitions(-DIPMGEMPLUGIN)
 add_definitions(-DNOPARTICLEARRAY)
 add_definitions(-DNODEARRAYLEVEL)
+add_definitions(-DUSE_THERMOFUN)
+add_definitions(-DUSE_THERMO_LOG)
 #add_definitions(-DUSE_OLD_NLOHMANJSON)
 
 # Compile the C++ source code into object files
@@ -18,8 +20,11 @@ add_library(GEMS3K_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES}  )
 
 # Check if a shared library is to be built
 if(BUILD_SHARED_LIBS)
+    # Enable automatic creation of a module definition (.def) file for a SHARED library on Windows.
+    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
     add_library(GEMS3K_SHARED SHARED $<TARGET_OBJECTS:GEMS3K_OBJECT>)
     set_target_properties(GEMS3K_SHARED PROPERTIES OUTPUT_NAME GEMS3K)
+    target_link_libraries(GEMS3K_SHARED PUBLIC ThermoFun::ThermoFun)
     install( TARGETS GEMS3K_SHARED
              EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
@@ -29,9 +34,11 @@ endif()
 if(BUILD_STATIC_LIBS)
    add_library(GEMS3K_STATIC STATIC $<TARGET_OBJECTS:GEMS3K_OBJECT>)
    set_target_properties(GEMS3K_STATIC PROPERTIES OUTPUT_NAME GEMS3K-static)
+   target_link_libraries(GEMS3K_STATIC PUBLIC ThermoFun::ThermoFun)
    install( TARGETS GEMS3K_STATIC
            EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
+
 
 # Install debug symbols
 if(MSVC)
