GEMS-205: Revival of GEMS3K build for different types of configurations and CI systems.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ tools-build/Makefile
 tools-build/obj
 tools-build/.qmake.*
 tools-build/kva2json
+tools-build/**
+test-tfun/**
+ipmlog.txt
 tools/*.pro.user
 tools/*.pro.user.*
 gemcalc-build/Makefile.*
