--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -5,13 +5,23 @@ include_directories(${CMAKE_SOURCE_DIR})
 
 add_executable(kva2json kva2json.cpp)
 
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-    target_link_libraries( kva2json PUBLIC GEMS3K-static )
+if(BUILD_GEM2MT MATCHES ON)
+  if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+    target_link_libraries(kva2json PUBLIC GEMS3K-static GEM2MT-static)
+  else()
+    target_link_libraries(kva2json PUBLIC GEMS3K GEM2MT)
+  endif()
 else()
+  if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+    target_link_libraries( kva2json PUBLIC GEMS3K-static )
+  else()
     target_link_libraries(kva2json PUBLIC GEMS3K )
+  endif()
 endif()
 
-target_link_libraries(kva2json PUBLIC ThermoFun::ThermoFun)
+if(USE_THERMOFUN MATCHES ON)
+   target_link_libraries(kva2json PUBLIC ThermoFun::ThermoFun)
+endif()
 
 install(TARGETS kva2json DESTINATION bin)
 
