--- a/nodearray-gem/CMakeLists.txt
+++ b/nodearray-gem/CMakeLists.txt
@@ -22,10 +22,10 @@ if(BUILD_SHARED_LIBS)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
     add_library(GEM2MT_SHARED SHARED $<TARGET_OBJECTS:GEM2MT_OBJECT>)
     set_target_properties(GEM2MT_SHARED PROPERTIES OUTPUT_NAME GEM2MT)
-    #target_link_libraries(GEM2MT_SHARED PUBLIC GEMS3K)
-    #if(USE_THERMOFUN MATCHES ON)
-    #  target_link_libraries(GEM2MT_SHARED PUBLIC ThermoFun::ThermoFun)
-    #endif()
+    target_link_libraries(GEM2MT_SHARED PUBLIC GEMS3K)
+    if(USE_THERMOFUN MATCHES ON)
+      target_link_libraries(GEM2MT_SHARED PUBLIC ThermoFun::ThermoFun)
+    endif()
     install( TARGETS GEM2MT_SHARED
              EXPORT GEM2MTTargets DESTINATION "lib" COMPONENT libraries)
 endif()
@@ -35,10 +35,10 @@ endif()
 if(BUILD_STATIC_LIBS)
    add_library(GEM2MT_STATIC STATIC $<TARGET_OBJECTS:GEM2MT_OBJECT>)
    set_target_properties(GEM2MT_STATIC PROPERTIES OUTPUT_NAME GEM2MT-static)
-   #target_link_libraries(GEM2MT_STATIC PUBLIC GEMS3K-static)
-   #if(USE_THERMOFUN MATCHES ON)
-   #     target_link_libraries(GEM2MT_STATIC PUBLIC ThermoFun::ThermoFun)
-   #endif()
+   target_link_libraries(GEM2MT_STATIC PUBLIC GEMS3K-static)
+   if(USE_THERMOFUN MATCHES ON)
+        target_link_libraries(GEM2MT_STATIC PUBLIC ThermoFun::ThermoFun)
+   endif()
    install( TARGETS GEM2MT_STATIC
            EXPORT GEM2MTTargets DESTINATION "lib" COMPONENT libraries)
 endif()
