GEMS 216: reset changes

--- a/tools-build/gems3k-config.json
+++ b/tools-build/gems3k-config.json
@@ -1,6 +1,6 @@
 {
     "log": {
-        "level": "trace",
+        "level": "info",
         "modules": [
             "gems3k",
             "ipm",
