Try fix simdjson windows

--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB SOURCE_FILES *.cpp)
 # Compile the C++ source code into object files
 add_library(GEMS3K_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES}  )
 
-target_compile_definitions(GEMS3K_OBJECT PUBLIC -DSPDLOG_FMT_EXTERNAL=yes) 
+#target_compile_definitions(GEMS3K_OBJECT PUBLIC -DSPDLOG_FMT_EXTERNAL=yes)
 
 # Check if a shared library is to be built
 if(BUILD_SHARED_LIBS)
