--- a/nodearray-gem/CMakeLists.txt
+++ b/nodearray-gem/CMakeLists.txt
@@ -14,7 +14,7 @@ set(SOURCE_FILES
      "m_gem2mtfor.cpp")
 
 # Compile the C++ source code into object files
-add_library(GEM2MT_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES}  )
+add_library(GEM2MT_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES})
 
 # Check if a shared library is to be built
 if(BUILD_SHARED_LIBS)
@@ -23,9 +23,9 @@ if(BUILD_SHARED_LIBS)
     add_library(GEM2MT_SHARED SHARED $<TARGET_OBJECTS:GEM2MT_OBJECT>)
     set_target_properties(GEM2MT_SHARED PROPERTIES OUTPUT_NAME GEM2MT)
     target_link_libraries(GEM2MT_SHARED PUBLIC GEMS3K)
-    if(USE_THERMOFUN MATCHES ON)
-      target_link_libraries(GEM2MT_SHARED PUBLIC ThermoFun::ThermoFun)
-    endif()
+    #if(USE_THERMOFUN MATCHES ON)
+    #  target_link_libraries(GEM2MT_SHARED PUBLIC ThermoFun::ThermoFun)
+    #endif()
     install( TARGETS GEM2MT_SHARED
              EXPORT GEM2MTTargets DESTINATION "lib" COMPONENT libraries)
 endif()
@@ -36,9 +36,9 @@ if(BUILD_STATIC_LIBS)
    add_library(GEM2MT_STATIC STATIC $<TARGET_OBJECTS:GEM2MT_OBJECT>)
    set_target_properties(GEM2MT_STATIC PROPERTIES OUTPUT_NAME GEM2MT-static)
    target_link_libraries(GEM2MT_STATIC PUBLIC GEMS3K-static)
-   if(USE_THERMOFUN MATCHES ON)
-     target_link_libraries(GEM2MT_STATIC PUBLIC ThermoFun::ThermoFun)
-   endif()
+   #if(USE_THERMOFUN MATCHES ON)
+   #  target_link_libraries(GEM2MT_STATIC PUBLIC ThermoFun::ThermoFun)
+   #endif()
    install( TARGETS GEM2MT_STATIC
            EXPORT GEM2MTTargets DESTINATION "lib" COMPONENT libraries)
 endif()
