--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -9,19 +9,19 @@ if(BUILD_GEM2MT MATCHES ON)
   if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     target_link_libraries(kva2json PUBLIC GEMS3K-static GEM2MT-static)
   else()
-    target_link_libraries(kva2json PUBLIC GEMS3K GEM2MT)
+    target_link_libraries(kva2json PUBLIC GEMS3K GEM2MT pthread)
   endif()
 else()
   if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-    target_link_libraries( kva2json PUBLIC GEMS3K-static )
+    target_link_libraries( kva2json PUBLIC GEMS3K-static)
   else()
-    target_link_libraries(kva2json PUBLIC GEMS3K )
+    target_link_libraries(kva2json PUBLIC GEMS3K pthread)
   endif()
 endif()
 
-if(USE_THERMOFUN MATCHES ON)
-   target_link_libraries(kva2json PUBLIC ThermoFun::ThermoFun)
-endif()
+#if(USE_THERMOFUN MATCHES ON)
+#   target_link_libraries(kva2json PUBLIC ThermoFun::ThermoFun)
+#endif()
 
 install(TARGETS kva2json DESTINATION bin)
 
