GEMS-221: Fixed CI in conda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ endif()
 option(BUILD_SHARED_LIBS "Build shared libraries." ON)
 option(BUILD_STATIC_LIBS "Build static libraries." ON)
 option(USE_THERMOFUN "Use ThermoFun" ON)
-option(BUILD_GEM2MT "Install GEM2MT lib." OFF)
+option(BUILD_GEM2MT "Install GEM2MT lib." ON)
 option(BUILD_NLOHMANNJSON "Use nlohmann json." OFF)
 option(BUILD_TOOLS "Build tools" ON)
 
@@ -128,4 +128,4 @@ if(BUILD_TOOLS)
 endif()
 
 # Install the cmake config files that permit users to use find_package(gems3k)
-#include(GEMS3KInstallCMakeConfigFiles)
+include(GEMS3KInstallCMakeConfigFiles)
