--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -10,41 +10,45 @@ file(GLOB SOURCE_FILES *.cpp)
 # Compile the C++ source code into object files
 add_library(GEMS3K_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES})
 
+if(USE_SPDLOG_PRECOMPILED)
+   if(NOT TARGET spdlog::spdlog)
+       find_package(spdlog CONFIG REQUIRED)
+   endif()
+endif()
+
 # Check if a shared library is to be built
 if(BUILD_SHARED_LIBS)
     # Enable automatic creation of a module definition (.def) file for a SHARED library on Windows.
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
-    add_library(GEMS3K_SHARED SHARED $<TARGET_OBJECTS:GEMS3K_OBJECT>)
-    set_target_properties(GEMS3K_SHARED PROPERTIES OUTPUT_NAME GEMS3K)
+    add_library(GEMS3K SHARED $<TARGET_OBJECTS:GEMS3K_OBJECT>)
+    add_library(GEMS3K::GEMS3K ALIAS GEMS3K)
     if(USE_THERMOFUN MATCHES ON)
-      target_link_libraries(GEMS3K_SHARED PUBLIC ThermoFun::ThermoFun)
+      target_link_libraries(GEMS3K ThermoFun::ThermoFun)
     else()
       if(USE_SPDLOG_PRECOMPILED)
-         target_compile_definitions(GEMS3K_SHARED PUBLIC USE_SPDLOG_PRECOMPILED)
-         target_link_libraries(GEMS3K_SHARED PUBLIC spdlog::spdlog)
+         target_compile_definitions(GEMS3K PUBLIC USE_SPDLOG_PRECOMPILED)
+         target_link_libraries(GEMS3K PUBLIC spdlog::spdlog)
       endif()
     endif()
-    install( TARGETS GEMS3K_SHARED
+    install( TARGETS GEMS3K
              EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
 
-
 # Check if a static library is to be built
 if(BUILD_STATIC_LIBS)
-   add_library(GEMS3K_STATIC STATIC $<TARGET_OBJECTS:GEMS3K_OBJECT>)
-   set_target_properties(GEMS3K_STATIC PROPERTIES OUTPUT_NAME GEMS3K-static)
+   add_library(GEMS3K-static STATIC $<TARGET_OBJECTS:GEMS3K_OBJECT>)
+    add_library(GEMS3K::GEMS3K-static ALIAS GEMS3K-static)
    if(USE_THERMOFUN MATCHES ON)
-     target_link_libraries(GEMS3K_STATIC PUBLIC ThermoFun::ThermoFun)
+     target_link_libraries(GEMS3K-static PUBLIC ThermoFun::ThermoFun)
    else()
-      if(USE_SPDLOG_PRECOMPILED)
-         target_compile_definitions(GEMS3K_STATIC PUBLIC USE_SPDLOG_PRECOMPILED)
-         target_link_libraries(GEMS3K_STATIC PUBLIC spdlog::spdlog)
-      endif()
+       if(USE_SPDLOG_PRECOMPILED)
+          target_compile_definitions(GEMS3K-static PUBLIC USE_SPDLOG_PRECOMPILED)
+          target_link_libraries(GEMS3K-static PUBLIC spdlog::spdlog)
+       endif()
    endif()
-   install( TARGETS GEMS3K_STATIC
+   install( TARGETS GEMS3K-static
            EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
-
 
 # Install debug symbols
 if(MSVC)
