Fixed build in MacOS

--- a/nodearray-gem/CMakeLists.txt
+++ b/nodearray-gem/CMakeLists.txt
@@ -22,7 +22,7 @@ if(BUILD_SHARED_LIBS)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
     add_library(GEM2MT SHARED $<TARGET_OBJECTS:GEM2MT_OBJECT>)
     add_library(GEMS3K::GEM2MT ALIAS GEM2MT)
-    target_link_libraries(GEM2MT PUBLIC GEMS3K)
+    target_link_libraries(GEM2MT PUBLIC GEMS3K::GEMS3K)
     install( TARGETS GEM2MT
              EXPORT GEM2MTTargets DESTINATION "lib" COMPONENT libraries)
 endif()
@@ -32,7 +32,7 @@ endif()
 if(BUILD_STATIC_LIBS)
    add_library(GEM2MT-static STATIC $<TARGET_OBJECTS:GEM2MT_OBJECT>)
    add_library(GEMS3K::GEM2MT-static ALIAS GEM2MT-static)
-   target_link_libraries(GEM2MT-static PUBLIC GEMS3K-static)
+   target_link_libraries(GEM2MT-static PUBLIC GEMS3K::GEMS3K-static)
    install( TARGETS GEM2MT-static
            EXPORT GEM2MTTargets DESTINATION "lib" COMPONENT libraries)
 endif()
