--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,21 +3,29 @@ message(STATUS "Building json <-> key-value converter ")
 
 include_directories(${CMAKE_SOURCE_DIR})
 
-add_executable(kva2json kva2json.cpp)
+set(Tools
+       kva2json
+       thread_test )
 
-if(BUILD_GEM2MT MATCHES ON)
-  if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-    target_link_libraries(kva2json PUBLIC GEMS3K-static GEM2MT-static)
-  else()
-    target_link_libraries(kva2json PUBLIC GEMS3K GEM2MT)
-  endif()
-else()
-  if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-    target_link_libraries( kva2json PUBLIC GEMS3K-static)
-  else()
-    target_link_libraries(kva2json PUBLIC GEMS3K)
-  endif()
-endif()
+foreach (toolName ${Tools})
 
-install(TARGETS kva2json DESTINATION bin)
+    add_executable(${toolName} ${toolName}.cpp)
+
+    if(BUILD_GEM2MT MATCHES ON)
+      if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+          target_link_libraries(${toolName} PUBLIC GEMS3K-static GEM2MT-static pthread)
+      else()
+          target_link_libraries(${toolName} PUBLIC GEMS3K GEM2MT pthread)
+      endif()
+    else()
+      if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+          target_link_libraries(${toolName} PUBLIC GEMS3K-static pthread)
+      else()
+          target_link_libraries(${toolName} PUBLIC GEMS3K pthread)
+      endif()
+    endif()
+
+    install(TARGETS ${toolName} DESTINATION bin)
+
+endforeach()
 
