Fixed link threads

--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -23,7 +23,7 @@ if(BUILD_SHARED_LIBS)
     add_library(GEMS3K SHARED $<TARGET_OBJECTS:GEMS3K_OBJECT>)
     add_library(GEMS3K::GEMS3K ALIAS GEMS3K)
     if(USE_THERMOFUN MATCHES ON)
-      target_link_libraries(GEMS3K ThermoFun::ThermoFun)
+      target_link_libraries(GEMS3K PUBLIC ThermoFun::ThermoFun)
     else()
       if(USE_SPDLOG_PRECOMPILED)
          target_compile_definitions(GEMS3K PUBLIC USE_SPDLOG_PRECOMPILED)
