--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,6 +3,8 @@ message(STATUS "Building json <-> key-value converter ")
 
 include_directories(${CMAKE_SOURCE_DIR})
 
+find_package(Threads REQUIRED)
+
 set(Tools
        kva2json
        thread_test )
@@ -13,15 +15,15 @@ foreach (toolName ${Tools})
 
     if(BUILD_GEM2MT MATCHES ON)
       if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-          target_link_libraries(${toolName} PUBLIC GEMS3K-static GEM2MT-static pthread)
+          target_link_libraries(${toolName} PUBLIC GEMS3K-static GEM2MT-static Threads::Threads)
       else()
-          target_link_libraries(${toolName} PUBLIC GEMS3K GEM2MT pthread)
+          target_link_libraries(${toolName} PUBLIC GEMS3K GEM2MT Threads::Threads)
       endif()
     else()
       if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-          target_link_libraries(${toolName} PUBLIC GEMS3K-static pthread)
+          target_link_libraries(${toolName} PUBLIC GEMS3K-static Threads::Threads)
       else()
-          target_link_libraries(${toolName} PUBLIC GEMS3K pthread)
+          target_link_libraries(${toolName} PUBLIC GEMS3K Threads::Threads)
       endif()
     endif()
 
