--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -15,15 +15,15 @@ foreach (toolName ${Tools})
 
     if(BUILD_GEM2MT MATCHES ON)
       if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-          target_link_libraries(${toolName} PUBLIC GEMS3K-static GEM2MT-static Threads::Threads)
+          target_link_libraries(${toolName} PUBLIC GEMS3K::GEMS3K-static GEMS3K::GEM2MT-static Threads::Threads)
       else()
-          target_link_libraries(${toolName} PUBLIC GEMS3K GEM2MT Threads::Threads)
+          target_link_libraries(${toolName} PUBLIC GEMS3K::GEMS3K GEMS3K::GEM2MT Threads::Threads)
       endif()
     else()
       if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-          target_link_libraries(${toolName} PUBLIC GEMS3K-static Threads::Threads)
+          target_link_libraries(${toolName} PUBLIC GEMS3K::GEMS3K-static Threads::Threads)
       else()
-          target_link_libraries(${toolName} PUBLIC GEMS3K Threads::Threads)
+          target_link_libraries(${toolName} PUBLIC GEMS3K::GEMS3K Threads::Threads)
       endif()
     endif()
 
